added planned finished date for run model

--- a/src/pages/run/run.html
+++ b/src/pages/run/run.html
@@ -70,7 +70,7 @@
             <ion-icon name="car" item-left></ion-icon>
             <span>
               <h2>Démarré :</h2>
-              <p><strong>{{run.startAt | date:'EEEE d MMM y'}}</strong> à {{run.beginAt | date:'shortTime'}}</p>
+              <p><strong>{{run.startAt | date:'EEEE d MMM y'}}</strong> à {{run.startAt | date:'shortTime'}}</p>
             </span>
           </ion-item>
 
