Added app version

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -30,7 +30,9 @@
   <ion-item>
     <button ion-button full icon-start (click)="setApi()"><ion-icon name="create"></ion-icon>Changer l'api</button>
   </ion-item>
-
+  <ion-item>
+    <ion-label color='primary'>Version : {{ appVersion }}</ion-label>
+  </ion-item>
 
 
   </ion-list>
