replace status text with colored bar

--- a/src/pages/vehicles/vehicles.html
+++ b/src/pages/vehicles/vehicles.html
@@ -21,12 +21,10 @@
         <ion-item-divider sticky>
             <ion-label>{{group.type.type}}</ion-label>
         </ion-item-divider>
-        <ion-item *ngFor="let vehicle of group.vehicles" (click)="showVehicle(vehicle)">
+        <ion-item *ngFor="let vehicle of group.vehicles" (click)="showVehicle(vehicle)" [attr.status]="vehicle.state">
             <ion-label>
                 <h2>{{ vehicle.name }}</h2>
             </ion-label>
-            <ion-note *ngIf="vehicle.user" item-right>{{ vehicle.user.fullname }}</ion-note>
-            <ion-note *ngIf="!vehicle.user" item-right class="free">Libre</ion-note>
         </ion-item>
     </ion-item-group>
     <ion-item *ngIf="!vehicles.length">
