--- a/src/pages/driver/driver.html
+++ b/src/pages/driver/driver.html
@@ -2,7 +2,7 @@
 
   <ion-navbar>
     <ion-title *ngIf="driver">{{ driver.firstname }} {{ driver.lastname }}</ion-title>
-    <!-- <ion-icon class="wifi-status" *ngIf="!this.InternetStatus.getConnectionStatus()" name="wifi"></ion-icon> -->
+     <ion-icon class="wifi-status" *ngIf="!this.InternetStatus.getConnectionStatus()" name="wifi"></ion-icon>
   </ion-navbar>
 
 </ion-header>
