--- a/src/pages/drivers/drivers.html
+++ b/src/pages/drivers/drivers.html
@@ -5,9 +5,9 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title class="runs-title-fix">
-      Drivers
+      <ion-icon name="contacts"></ion-icon>&nbsp;Drivers
     </ion-title>
-    <!-- <ion-icon class="wifi-status" *ngIf="!this.InternetStatus.getConnectionStatus()" name="wifi" ></ion-icon> -->
+     <ion-icon class="wifi-status" *ngIf="!this.InternetStatus.getConnectionStatus()" name="wifi" ></ion-icon>
   </ion-navbar>
 </ion-header>
 
