--- a/src/pages/run/run.html
+++ b/src/pages/run/run.html
@@ -141,7 +141,6 @@
                 <ion-row *ngIf="!belongsToRunner(runner) && !runner.user && !alreadyInRun() && run.status != RunStatusEnum.completed">
                   <ion-col col-12>
                     <div class="runner__user runner__user--selectable">
-                      <ion-icon name="man" item-left></ion-icon>
                       <button ion-button full (click)="assignRunner(runner)">Je prends le run !</button>
                     </div>
                   </ion-col>
@@ -154,35 +153,13 @@
                       <h2>{{runner.user.fullname}}</h2>
                     </div>
                   </ion-col>
-                  <ion-col col-6>
+                  <ion-col *ngIf="runner.user" col-6>
                     <div class="runner__vehicle">
                       <ion-icon name="car" item-left></ion-icon>
                       <h2>{{ runner.vehicle ? runner.vehicle.name : runner.vehicleCategory.type }}</h2>
                     </div>
                   </ion-col>
                 </ion-row>
-                <!--<ion-row>-->
-                  <!--<ion-col col-6>-->
-                    <!--<div class="runner__user"  (click)="showProfil(runner.user)">-->
-                      <!--<ion-icon name="man" item-left></ion-icon>-->
-                      <!--<h2>{{runner.user.fullname}}</h2>-->
-                    <!--</div>-->
-                  <!--</ion-col>-->
-                  <!--<ion-col col-6>-->
-
-                    <!--<div class="runner__vehicle runner__vehicle&#45;&#45;selectable" *ngIf="!runner.vehicle ">-->
-                      <!--<ion-icon name="car" item-left></ion-icon>-->
-                      <!--<h2 *ngIf="!canUpdateRunner(runner)">{{ runner.vehicleCategory.type }}</h2>-->
-                      <!--<ion-select *ngIf="canUpdateRunner(runner)" (ionChange)="selectVehicle($event,runner)" placeholder="Choisir la voiture">-->
-                        <!--<ion-option *ngFor="let vehicle of availableVehicles" [value]="vehicle">{{vehicle.name}}</ion-option>-->
-                      <!--</ion-select>-->
-                    <!--</div>-->
-                    <!--<div class="runner__vehicle" *ngIf="runner.vehicle">-->
-                      <!--<ion-icon name="car" item-left></ion-icon>-->
-                      <!--<h2>{{ runner.vehicle.name }}</h2>-->
-                    <!--</div>-->
-                  <!--</ion-col>-->
-                <!--</ion-row>-->
                 </ion-grid>
             </ion-item>
 
